Fix Safary z-index bug

--- a/src/stylesheets/backgrounds/_background.scss
+++ b/src/stylesheets/backgrounds/_background.scss
@@ -3,7 +3,7 @@
 
   &-sky {
     position: absolute;
-    z-index: 3;
+    z-index: 0;  // fix Safari bug
     width: 100%;
     top: 0;
     left: 0;
